# project_tails_v2

./: .gitignore  Cargo.toml
assets/: Act1Data (copy).txt~  Act1Data.txt~  EntityData.txt~  test.sh~
assets/EmeraldHillZone/: Block17.json  Block22.json  Block31.json
assets/Tails/: test.sh~
src/: act.rs  animation.rs  asset_mgr.rs  block.rs  camera.rs  entity.rs  input.rs  level_editor.rs  main.rs  physical.rs  player.rs  renderable.rs
